fixed all courses section uneven width in allCourses page

--- a/src/customCss/courses.css
+++ b/src/customCss/courses.css
@@ -274,7 +274,7 @@
 
 
 .allCourses-card-details{
-    min-width: 12rem;
+    max-width: 39rem;
     font-size: .8rem;
 }
 
